Implementazione di LoginController, corretti UserController e RelationController